--- a/.gitmodules
+++ b/.gitmodules
@@ -15,7 +15,7 @@
 	url = https://github.com/nlohmann/json
 [submodule "third_party/HtmlBuilder"]
 	path = third_party/HtmlBuilder
-	url = https://github.com/adventurist/HtmlBuilder.git
+	url = https://github.com/adventurist/HtmlBuilder
 [submodule "third_party/kjson"]
 	path = third_party/kjson
 	url = https://github.com/adventurist/kjson
