--- a/.gitmodules
+++ b/.gitmodules
@@ -19,3 +19,6 @@
 [submodule "third_party/kjson"]
 	path = third_party/kjson
 	url = https://github.com/adventurist/kjson
+[submodule "gn"]
+	path = gn
+	url = https://gn.googlesource.com/gn
