swapping to original

--- a/.gitmodules
+++ b/.gitmodules
@@ -16,3 +16,6 @@
 [submodule "third_party/kjson"]
 	path = third_party/kjson
 	url = https://github.com/adventurist/kjson
+[submodule "third_party/HtmlBuilder"]
+	path = third_party/HtmlBuilder
+	url = https://github.com/SRombauts/HtmlBuilder
