updating to use newer cpr

--- a/src/ktube/BUILD.gn
+++ b/src/ktube/BUILD.gn
@@ -15,6 +15,9 @@ config("cpr") {
   include_dirs = [
     "//third_party/cpr/include"
   ]
+  libs = [
+    "//third_party/cpr/build/lib/libcpr.so",
+  ]
 }
 
 config("knlp") {
@@ -68,18 +71,17 @@ source_set("ktube_sources") {
     "//src",
   ]
 
-  libs = [
-    "crypto",
-    "cpr",
-    "curl",
-  ]
+  # libs = [
+  #   "cpr"
+  # ]
 
   sources = [
     "//src/ktube/api/youtube.cpp",
     "//src/ktube/api/youtube_live.cpp",
     "//src/ktube/api/youtube_comment.cpp",
     "//src/ktube/common/constants.cpp",
-    "//src/ktube/api/analysis/tools.cpp"
+    "//src/ktube/api/analysis/tools.cpp",
+    "//src/ktube/auth/auth.cpp"
   ]
 }
 
@@ -93,12 +95,9 @@ executable("ktube") {
     "//third_party/json/include",
   ]
 
-  libs = [
-    "pthread",
-    "crypto",
-    "cpr",
-    "curl"
-  ]
+  # libs = [
+  #   "cpr"
+  # ]
 
   sources = [
     "//src/ktube/main.cpp"
@@ -116,9 +115,6 @@ shared_library("ktube_lib") {
   ]
 
   libs = [
-    "pthread",
-    "crypto",
-    "cpr",
-    "curl"
+    "cpr"
   ]
 }
